# drive-thru-agent-poc

./: .env.example  .gitignore  DEPLOY.md  README.md  drive-thru-agent-poc-spec.md  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
docs/: system-design.md
evals/: __main__.py  cases.py  report.py  runner.py
src/drive_thru/: money.py  order_state.py
src/drive_thru/agent/: cli.py  graph.py  prompts.py  state.py  tools.py
src/drive_thru/db/: init_db.py  repository.py  schema.sql  seed_data.py
src/drive_thru/tools/: __init__.py  apply_promotion.py  cancel_order.py  confirm_order.py  query_menu.py  query_promotions.py  submit_order.py  swap_meal_item.py  update_order.py
src/drive_thru/ui/: kiosk.py
src/drive_thru/ui/components/voice_listener/: index.html
src/drive_thru/voice/: asr.py  audio.py  cli.py  tts.py
tests/: conftest.py  test_apply_promotion.py  test_cancel_order.py  test_confirm_order.py  test_graph_compiles.py  test_query_menu.py  test_query_promotions.py  test_submit_order.py  test_swap_meal_item.py  test_update_order.py
