[project]
name = "drive-thru-agent"
version = "0.1.0"
description = "Voice-first AI agent for fast food drive-thru kiosks (POC)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "langfuse>=2.50.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drive_thru"]

[tool.ruff]
line-length = 100
target-version = "py311"
